--- a/.github/workflows/update-links.yml
+++ b/.github/workflows/update-links.yml
@@ -1,7 +1,7 @@
 name: Update Link Automatically
-on: 
-  schedule:
-  - cron: "0 */6 * * *"
+on: [push]
+#   schedule:
+#   - cron: "0 */6 * * *"
 
 jobs:
   build:
